--- a/miven-commons-dependencies/pom.xml
+++ b/miven-commons-dependencies/pom.xml
@@ -6,10 +6,10 @@
         <artifactId>miven-dependencies-parent</artifactId>
         <groupId>miven.java</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath/>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>miven-commons-dependencies</artifactId>
-    <version>${project.parent.version}</version>
     <packaging>pom</packaging>
 </project>
