--- a/miven-common/pom.xml
+++ b/miven-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>miven-commons-parent</artifactId>
         <groupId>miven.java</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
