--- a/miven-commons-dependencies/pom.xml
+++ b/miven-commons-dependencies/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>miven-dependencies-parent</artifactId>
         <groupId>miven.java</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
         <relativePath/>
     </parent>
     <modelVersion>4.0.0</modelVersion>
